
syntax = "proto2";
import "root.proto";

message signin_req {
	required string nick_name = 1;
	required string pwd = 2;
}

message login_req {
	required string nick_name = 1;
	required string pwd = 2;
}

message sigin_res {
	required uint32 uid   = 1;
	required string token = 2;
}

message login_res {
	required uint32 uid   = 1;
	required string token = 2;
}

message logout_req {
	required int32 uid = 1;
}

message common_res {
	required string message = 1;
}




